--- a/style/style.css
+++ b/style/style.css
@@ -71,29 +71,30 @@ h3 {
 
 /*HEADER*/
 
-.header{
+.header {
     display: flex;
     justify-content: center;
 }
 
-.header__logo{
+.header__logo {
     margin: 3rem 0;
 }
 
 /*FOOTER*/
-.footer{
+.footer {
     background-color: var(--primarioOscuro);
     padding: 1rem 0;
     margin-top: 2rem;
 }
-.footer__texto{
+
+.footer__texto {
     font-family: var(--fuentePrincipal);
     text-align: center;
 }
 
 /*NAVEGACION*/
 
-.navegacion{
+.navegacion {
     background-color: var(--primarioOscuro);
     display: flex;
     justify-content: center;
@@ -101,13 +102,73 @@ h3 {
     padding: 1rem 0;
 }
 
-.navegacion__enlace{
+.navegacion__enlace {
     font-family: var(--fuentePrincipal);
     color: var(--blanco);
     font-size: 3rem;
 }
 
 .navegacion__enlace:hover,
-.navegacion__enlace--activo{
+.navegacion__enlace--activo {
     color: var(--secundario);
+}
+
+/*GRID*/
+.grid{
+    margin: 0 auto;
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+
+/*PRODUCTOS*/
+
+.producto{
+    background-color: var(--primarioOscuro);
+    padding: 1rem;
+}
+
+.producto__imagen{
+    width: 100%;
+}
+
+.producto__nombre{
+    font-size: 4rem;
+}
+
+.producto__precio{
+   font-size: 2.8rem; 
+   color: var(--secundario);
+}
+
+.producto__nombre,
+.producto__precio{
+    font-family: var(--fuentePrincipal);
+    margin: 1rem 0;
+    text-align: center;
+    line-height: 1.2;
+}
+
+/*GRAFICOS*/
+.grafico{
+    min-height: 30rem;
+}
+
+.grafico--camisas{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    background-image: url(../img/grafico1.jpg);
+}
+
+.grafico--node{
+    grid-row: 5 / 6;
+    grid-column: 2 / 4;
+    background-image: url(../img/grafico2.jpg);
+}
+
+.grafico--camisas,
+.grafico--node{
+    background-repeat: no-repeat;
+    background-size: cover;
 }
