--- a/style/style.css
+++ b/style/style.css
@@ -172,3 +172,70 @@ h3 {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+/*NOSOTROS*/
+
+.nosotros{
+   display: grid;
+   grid-template-columns: repeat(2,1fr);
+   column-gap: 2rem;
+   width: 90%;
+   margin: 0 auto;
+   align-items: center;
+}
+
+.nosotros__imagen{
+    width: 100%;
+}
+
+/*BLOQUES*/
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2rem;
+}
+.bloque{
+    text-align: center;
+}
+.bloque__titulo{
+    margin: 0;
+}
+
+/*Media Queries*/
+
+@media (max-width: 1024px){
+    .nosotros{
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: auto;
+     }
+     .nosotros__imagen{
+        grid-row: 1/2;
+    }
+}
+
+@media (max-width: 900px){
+    .grid{
+        grid-template-columns: repeat(2,1fr);
+        gap: 1rem;
+    }
+    .producto{
+        padding: 1rem;
+    }
+    .grafico--node{
+        grid-row: 8 / 9;
+        grid-column: 1 / 3;
+    }
+}
+
+@media (max-width: 750px){
+    .bloques{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 600px){
+    .grid{
+        width: 95%;
+        margin: 1rem auto;
+    }
+}
