--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 :root {
     /*PALETA DE COLORES*/
     --primario: #FC9262;
@@ -201,6 +203,45 @@ h3 {
     margin: 0;
 }
 
+/*PRODUCTOS*/
+.camisa{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    column-gap: 2rem;
+}
+.camisa img{
+    width: 100%;
+}
+
+.formulario{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+}
+
+.formulario__campo{
+    border: 1rem solid var(--primarioOscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+}
+
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: backgroud-color .3s ease;
+    grid-column: 1/3;
+}
+.formulario__submit:hover{
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
+}
+
 /*Media Queries*/
 
 @media (max-width: 1024px){
@@ -225,6 +266,14 @@ h3 {
         grid-row: 8 / 9;
         grid-column: 1 / 3;
     }
+
+    .camisa{
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+    }
+   
+  
 }
 
 @media (max-width: 750px){
@@ -237,5 +286,8 @@ h3 {
     .grid{
         width: 95%;
         margin: 1rem auto;
+    }
+    .camisa{
+        width: 70% ;
     }
 }
